# RT-DETR

./: pyproject.toml
src/detr/data/: dataloader.py  transforms.py
src/detr/data/cifar10/: __init__.py
src/detr/data/coco/: coco_dataset.py  coco_eval.py
src/detr/nn/arch/: classification.py
src/detr/nn/backbone/: presnet.py  test_resnet.py
src/detr/nn/criterion/: __init__.py
src/detr/optim/: amp.py  ema.py  optim.py
src/detr/solver/: det_engine.py  det_solver.py  solver.py
src/detr/zoo/rtdetr/: hybrid_encoder.py  matcher.py  rtdetr.py  rtdetr_criterion.py  rtdetr_decoder.py  rtdetr_postprocessor.py
tools/: export_onnx.py  train.py
